implement most of the posting endpoints
